testsuite/tests/ghc-regress/indexed-types/should_fail/SimpleFail15.hs
{-# LANGUAGE TypeFamilies #-}

module ShouldFail where

foo :: (a,b) -> (a~b => t) -> (a,b)
foo p x = p 
